fix: increase color contrast on navbar toggle

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,6 +21,10 @@
     height: 100%;
 }
 
+.navbar-toggle {
+    color: #474747;
+}
+
 .next-lightbox, .prev-lightbox, .close-lightbox {
     background-color: #000;
     color: #fff !important;
